# python-halftone

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  test.py
halftone/: __init__.py  __main__.py  halftone.py  halftone_original.py
