[tool.poetry]
name = "python-halftone"
version = "2.2.0"
description = "A python module that uses PIL/Pillow to give images a halftone effect"
authors = ["Steven Burnett <texruska@users.noreply.github.com>"]
license = "Unlicense"
readme = "README.md"
packages = [{include = "python_halftone"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.0.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"
flake8 = "^6.1.0"
mypy = "^1.4.1"
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79


[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
